// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SchemaModel wrap operations replaceRoot generates correct patch 1`] = `
[
  {
    "fieldName": "",
    "patch": {
      "op": "replace",
      "path": "",
      "value": {
        "items": {
          "default": "",
          "type": "string",
        },
        "type": "array",
      },
    },
    "propertyChanges": [],
    "typeChange": {
      "fromType": "object",
      "toType": "array<string>",
    },
  },
]
`;

exports[`SchemaModel wrap operations wrapInArray generates correct patch 1`] = `
[
  {
    "fieldName": "name",
    "patch": {
      "op": "replace",
      "path": "/properties/name",
      "value": {
        "items": {
          "default": "",
          "type": "string",
        },
        "type": "array",
      },
    },
    "propertyChanges": [
      {
        "from": "",
        "property": "default",
        "to": undefined,
      },
    ],
    "typeChange": {
      "fromType": "string",
      "toType": "array<string>",
    },
  },
]
`;

exports[`SchemaModel wrap operations wrapRootInArray generates correct patch 1`] = `
[
  {
    "fieldName": "",
    "patch": {
      "op": "replace",
      "path": "",
      "value": {
        "items": {
          "additionalProperties": false,
          "properties": {
            "age": {
              "default": 0,
              "type": "number",
            },
            "name": {
              "default": "",
              "type": "string",
            },
          },
          "required": [
            "age",
            "name",
          ],
          "type": "object",
        },
        "type": "array",
      },
    },
    "propertyChanges": [],
    "typeChange": {
      "fromType": "object",
      "toType": "array<object>",
    },
  },
]
`;
